# dmriprep

./: .buildinfo  .codecov.yml  .coveragerc  .dockerignore  .gitattributes  .gitignore  .mailmap  .pep8speaks.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .zenodo.json  AUTHORS.md  AUTHORS.rst  CHANGES.rst  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  Dockerfile-dmriprep  GOVERNANCE.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  README.rst  REFERENCES.rst  api.html  changes.html  dmriprep-docker  genindex.html  get_version.py  index.html  installation.html  links.html  long_description.rst  objects.inv  (+16 more)
.afq/: run.py
.circleci/: config.yml
.doctrees/: api.doctree  changes.doctree  environment.pickle  index.doctree  installation.doctree  links.doctree  roadmap.doctree  usage.doctree
.doctrees/api/: dmriprep.config.doctree  dmriprep.interfaces.doctree  dmriprep.interfaces.images.doctree  dmriprep.interfaces.reports.doctree  dmriprep.interfaces.vectors.doctree  dmriprep.utils.bids.doctree  dmriprep.utils.doctree  dmriprep.utils.images.doctree  dmriprep.utils.misc.doctree  dmriprep.utils.vectors.doctree  dmriprep.workflows.base.doctree  dmriprep.workflows.doctree  dmriprep.workflows.dwi.base.doctree  dmriprep.workflows.dwi.doctree  dmriprep.workflows.dwi.eddy.doctree  dmriprep.workflows.dwi.outputs.doctree  dmriprep.workflows.dwi.util.doctree  dmriprep.workflows.fmap.base.doctree  dmriprep.workflows.fmap.doctree
.github/: ISSUE_TEMPLATE.md  config.yml  stale.yml
.github/workflows/: docbuild.yml  docker.yml  pythonpackage.yml  test.yml
.maint/: CONTRIBUTORS.md  HOW_WE_WORK.md  MAINTAINERS.md  PIs.md  contributors.json  developers.json  former.json  paper_author_list.py  requirements.txt  update_authors.py  update_changes.sh  update_zenodo.py
.maintenance/: update_zenodo.py
0.2.1/: .buildinfo  api.html  changes.html  genindex.html  index.html  installation.html  links.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
0.2.1/.doctrees/: api.doctree  changes.doctree  environment.pickle  index.doctree  installation.doctree  links.doctree  usage.doctree
0.2.1/_sources/: usage.rst.txt
0.2.1/api/: dmriprep-workflows-base-1.py  dmriprep-workflows-base-4.py  dmriprep.config.html  dmriprep.interfaces.html  dmriprep.interfaces.reports.html  dmriprep.interfaces.vectors.html  dmriprep.utils.bids.html  dmriprep.utils.html  dmriprep.utils.vectors.html  dmriprep.workflows.base.html  dmriprep.workflows.html  (+1 more)
0.2.2/: .buildinfo  api.html  changes.html  genindex.html  index.html  installation.html  links.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
0.3.0/: .buildinfo  api.html  changes.html  genindex.html  index.html  installation.html  links.html  objects.inv  py-modindex.html  roadmap.html  search.html  searchindex.js  usage.html
0.4.0/: api.html  changes.html  genindex.html  index.html  installation.html  links.html  objects.inv  py-modindex.html  roadmap.html  search.html  searchindex.js  usage.html
0.5.0/: .buildinfo  api.html  changes.html  genindex.html  index.html  installation.html  links.html  objects.inv  py-modindex.html  roadmap.html  search.html  searchindex.js  usage.html
0.5.0rc0/: .buildinfo  api.html  changes.html  genindex.html  index.html  installation.html  links.html  objects.inv  py-modindex.html  roadmap.html  search.html  searchindex.js  usage.html
_sources/: roadmap.rst.txt
api/: dmriprep-workflows-base-1.py  dmriprep-workflows-base-2.py  dmriprep.config.html  dmriprep.interfaces.html  dmriprep.interfaces.images.html  dmriprep.interfaces.reports.html  dmriprep.interfaces.vectors.html  dmriprep.utils.bids.html  dmriprep.utils.html  dmriprep.utils.images.html  dmriprep.utils.misc.html  dmriprep.utils.vectors.html  dmriprep.workflows.base.html  dmriprep.workflows.dwi.base.html  dmriprep.workflows.dwi.eddy.html  dmriprep.workflows.dwi.html  dmriprep.workflows.dwi.outputs.html  dmriprep.workflows.dwi.util.html  dmriprep.workflows.fmap.base.html  dmriprep.workflows.fmap.html  dmriprep.workflows.html
dmriprep/: __about__.py  __init__.py  _version.py  base.py  cli.py  conftest.py  data.py  dmriprep.py  io.py  qc.py  run.py  run_1.py  utils.py
dmriprepViewer/: .snyk  README.md  index.html  package-lock.json  package.json
dmripreproc/: __init__.py  cli.py  utils.py
docker/: Dockerfile  dockerhub_image  environment.yml  license.txt
docs/: Makefile  changes.rst  conf.py  dmriprep.interfaces.rst  dmriprep.rst  dmriprep.utils.rst  dmriprep.viz.rst  dmriprep.workflows.dwi.rst  dmriprep.workflows.fieldmap.rst  dmriprep.workflows.rst  dmripreproc.interfaces.rst  dmripreproc.rst  dmripreproc.utils.rst  dmripreproc.workflows.dwi.rst  dmripreproc.workflows.fieldmap.rst  dmripreproc.workflows.rst  index.rst  installation.rst  license.rst  links.rst  make.bat  modules.rst  outputs.rst  requirements.txt  roadmap.rst  sdc.rst  usage.rst  workflows.rst
docs_copyright-notice/: api.html  changes.html  genindex.html  index.html  installation.html  links.html  objects.inv  py-modindex.html  roadmap.html  search.html  searchindex.js  usage.html
kubernetes/: create_kube_job.py  delete_cluster.sh  delete_job.sh  run_dmriprep.yml  run_dmriprep.yml.tmpl  run_job.sh  setup_gcp_kubernetes_dmriprep.sh
master/: .buildinfo  api.html  changes.html  genindex.html  index.html  installation.html  links.html  objects.inv  py-modindex.html  roadmap.html  search.html  searchindex.js  usage.html
notebooks/: acq_param_testing.ipynb  fmap_testing.ipynb  make_qc.ipynb  slice_timing.ipynb  test_wf.ipynb
preafq/: __init__.py  base.py  cli.py  fetch_bids_s3.py  fetch_hbn.py  preafq.py  qc.py  run.py  run_1.py  run_data.1.py
preafqViewer/: README.md  index.html  package-lock.json  package.json
test_docs/: .buildinfo  api.html  changes.html  genindex.html  index.html  installation.html  links.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
tests/: __init__.py  test_dmriprep.py  test_dmripreproc.py  test_preafq.py  test_utils.py
(+679 files in other folders)
