[metadata]
url = https://github.com/nipreps/dmriprep
author = The dMRIPrep developers
author_email = code@oscaresteban.es
maintainer = Oscar Esteban
maintainer_email = code@oscaresteban.es
description = dMRIPrep is a robust and easy-to-use pipeline for preprocessing of diverse dMRI data.
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = Apache License, Version 2.0
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.5
install_requires =
    dipy >=1.0.0
    indexed_gzip >=0.8.8
    nibabel ~= 3.0
    nipype ~= 1.4.2
    niworkflows ~= 1.1.9
    numpy
    pybids ~= 0.9.4
    pyyaml
    smriprep ~= 0.5.2
    templateflow ~= 0.4.2
    toml
test_requires =
    codecov
    coverage
    pytest
packages = find:
include_package_data = True

[options.exclude_package_data]
* = tests

[options.extras_require]
datalad = datalad
doc =
    nbsphinx
    packaging
    pydot >= 1.2.3
    pydotplus
    sphinx >= 2.1.2
    sphinx-argparse
    sphinx_rtd_theme
    sphinxcontrib-apidoc ~= 0.3.0
    sphinxcontrib-napoleon
    sphinxcontrib-versioning
docs =
    %(doc)s
duecredit = duecredit
resmon = psutil >=5.4
popylar = popylar >= 0.2
style =
    flake8 >= 3.7.0
test =
    pytest >= 4.4
    pytest-xdist >= 1.28
    pytest-cov
    coverage
tests =
    %(test)s
all =
    %(datalad)s
    %(doc)s
    %(duecredit)s
    %(resmon)s
    %(popylar)s
    %(tests)s

[options.package_data]
dmriprep =
    VERSION
    config/reports-spec.yml
    data/boilerplate.bib
    data/tests/config.toml
    data/tests/THP/*
    data/tests/THP/sub-THP0005/anat/*
    data/tests/THP/sub-THP0005/dwi/*

[options.entry_points]
console_scripts =
    dmriprep=dmriprep.cli.run:main

[versioneer]
VCS = git
style = pep440
versionfile_source = dmriprep/_version.py
versionfile_build = dmriprep/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
doctests = False
exclude=
    *build/
    */.afq/*
    docs/
select = C,E,F,W,B,B950
ignore = N802,N806,W504,E203

[tool:pytest]
norecursedirs = .* _*
addopts = -vx --doctest-modules
doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE
env =
    PYTHONHASHSEED=0
filterwarnings =
    ignore::DeprecationWarning
